# cueapi-cli

./: .mergify.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  parity-manifest.json  pyproject.toml  setup.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: argus-qa.yml  cli-test.yml  feature-to-main.yml  publish.yml  staging-deploy.yml
cueapi/: __init__.py  auth.py  cli.py  client.py  credentials.py  formatting.py  quickstart.py
tests/: test_cli.py  test_cli_integration.py  test_login_existing_user.py
