[project]
name = "cueapi"
version = "0.1.0"
description = "CLI for CueAPI — Your Agents' Cue to Act. The scheduling API for AI agents."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    {name = "Vector Apps Inc.", email = "hello@cueapi.ai"}
]
keywords = ["cueapi", "ai-agents", "scheduling", "webhook", "cron", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",

    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://cueapi.ai"
Repository = "https://github.com/govindkavaturi-art/cueapi-cli"

[project.scripts]
cueapi = "cueapi.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
