[project]
name = "cueapi"
version = "0.1.3"
description = "CLI for CueAPI - the scheduling API for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    {name = "Vector Apps Inc.", email = "support@vector.build"}
]
keywords = ["cueapi", "ai-agents", "scheduling", "webhook", "cron", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://cueapi.ai"
Documentation = "https://docs.cueapi.ai"
Repository = "https://github.com/cueapi/cueapi-cli"
"Bug Tracker" = "https://github.com/cueapi/cueapi-cli/issues"

[project.scripts]
cueapi = "cueapi.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
