[project]
name = "cueapi"
version = "0.1.5"
description = "Official CLI for CueAPI — open-source execution accountability primitive for AI agents. Schedule agent work, require evidence-backed outcomes, and gate execution with write-once verification from your terminal."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    {name = "Vector Apps Inc.", email = "support@cueapi.ai"}
]
maintainers = [
    {name = "Vector Apps Inc.", email = "support@cueapi.ai"}
]
keywords = [
    "cueapi",
    "ai-agents",
    "agent-infrastructure",
    "scheduling",
    "cron",
    "webhook",
    "cli",
    "llm",
    "llm-observability",
    "accountability",
    "verification",
    "outcome-reporting",
    "claude",
    "gpt",
    "gemini",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://cueapi.ai"
Documentation = "https://docs.cueapi.ai"
Repository = "https://github.com/cueapi/cueapi-cli"
"Bug Tracker" = "https://github.com/cueapi/cueapi-cli/issues"
Changelog = "https://github.com/cueapi/cueapi-cli/blob/main/CHANGELOG.md"
"Source Code" = "https://github.com/cueapi/cueapi-cli"
"Status Page" = "https://status.cueapi.ai"

[project.scripts]
cueapi = "cueapi.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
